styles.css
/* roboto-regular - latin */
@font-face {
  font-family: 'Roboto';
  src: url('assets/fonts/roboto-v50-latin-regular.woff2') format('woff2'); 
  font-weight: 400;
  font-style: normal;
  font-display: swap; 
}

/* roboto-700 - latin */
@font-face {
  font-family: 'Roboto';
  src: url('assets/fonts/roboto-v50-latin-700.woff2') format('woff2');
  font-weight: 700;
  font-style: normal;
  font-display: swap;  
}


/* == CSS RESET == */

/* Box sizing rules */
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Prevent font size inflation */
html {
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  height: 100%;
}

/* Remove default margin in favour of better control in authored CSS */
body, h1, h2, h3, h4, p,
figure, blockquote, dl, dd {
  margin-block-end: 0;
}

/* Remove list styles on ul, ol elements */
ul, ol {
  list-style: none;
}

/* Set shorter line heights on headings and interactive elements */
h1, h2, h3, h4,
button, input, label {
  line-height: 1.1;
}

/* Balance text wrapping on headings */
h1, h2,
h3, h4 {
  text-wrap: balance;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
  color: currentColor;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input, button,
textarea, select {
  font-family: inherit;
  font-size: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
  min-height: 10em;
}

/* Anything that has been anchored to should have extra scroll margin */
:target {
  scroll-margin-block: 5ex;
}


:root {
  /* == COLOR PALLETTE == */
  /* Primary Color */
  --clr-red: hsl(4, 100%, 67%);
  --clr-orangered: hsl(28, 100%, 45%);

  /* Neutral Colors */
  --clr-grey: hsl(0, 0%,58%);
  --clr-white: hsl(0, 0%, 100%);
  --clr-blue-700: hsl(235, 18%, 26%);
  --clr-blue-800: hsl(234, 29%, 20%);

  /* == TYPOGRAPHY == */
  /* Font Family */
  --ff-body: "Roboto", sans-serif;

  /* Font Size */
  --fs-body: 1rem;

  /* Font Weights */
  --fw-regular: 400;
  --fw-bold: 700;

  /* Spacing */
  --space-xs: 0.5rem;
  --space-sm: 1rem;
  --space-md: 1.5rem;
  --space-lg: 2rem;
  --space-xlg: 2.5rem;
}

body {
  min-height: 100vh;
  min-height: 100svh;
  background:  var(--clr-white);
  font-family: var(--ff-body);
  font-size: var(--fs-body);
  color: var(--clr-blue-700);
  line-height: 1.5;
}

.main__content {
  width: 100%;
  height: auto;
}

picture {
  display: block;
  height: auto;
}

picture .main__illustration {
  display: block;
  width: 100%;
  height: auto;
  object-fit: contain;
}

.main__signup--block {
  /*display: block;*/
  display: none;
}

.main__signup--copy {
  padding: 2rem 1.5rem;
}

.main__signup--heading {
  font-weight: var(--fw-bold);
  font-size: clamp(2.5rem, 4vw, 3rem);
  margin-block-end: var(--space-md);
}

.main__signup--text {
  font-weight: var(--fw-regular);
  margin-block-end: var(--space-md);
}

.main__signup--copy ul{
  padding-inline-start: 0; /* remove default padding for ul */
  margin-block-end: var(--space-lg);
  line-height: 1.4;
}

.main__signup--copy ul li {
  margin-block-end: 1rem;
  padding-inline-start: var(--space-lg);
  position: relative;
}

.main__signup--copy ul li::before {
  content: "";
  position: absolute;
  left: 0rem;
  top: -0.1rem;
  width: 1.4rem;
  height: 1.4rem;
  padding-inline-start: 0.2rem;
  background-image: url(assets/images/icon-list.svg);
  background-size: contain;
  background-repeat: no-repeat;
}

.email-error-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-size: 0.8rem;
  /*font-size: clamp(0.8rem, 2.3vw, 2rem);*/
  margin-block-end: 0.5rem;
}

.field-button-container {
  display: flex;
  flex-direction: column;
  gap: 1.4rem;
}

.field-button-container input, button  {
  all: unset;
  padding: 0.8rem;
  border-radius: 0.5rem;
  cursor: pointer;
  border: 1px solid var(--clr-grey);
}

.field-button-container input {
  padding-inline-start: 1.5rem;
}

.field-button-container button {
  background: var(--clr-blue-800);
  color: var(--clr-white);
  text-align: center;
  padding-block: 1rem;
  font-size: 0.95rem;
  /*font-size: clamp(0.95rem, 2.3vw, 2rem);*/
  font-weight: var(--fw-bold);
}

.success-block {
  height: 100%;
  min-height: 100vh;
  min-height: 100svh;
  background: var(--clr-white);
  /*display: none;*/
  display: block;
}

.success-block.show {
  display: block;
}

.success-message {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 5rem auto;
  padding: var(--space-md);
}

.success-message img {
  width: 4rem;
  height: 4rem;
  margin-block-end: var(--space-xlg);
}

.success-message h1 {
  font-size: clamp(2rem, 2vw, 2.5rem);
  margin-block-end: var(--space-lg);

}

.success-message p {
  margin-block-end: 10rem;
  color: var(--clr-blue-700);
  font-weight: var(--fw-regular);
}

.success-message p a {
  text-decoration: none;
}

.success-message button {
  display: block;
  all: unset;
  background: var(--clr-blue-800);
  color: var(--clr-white);
  padding: clamp(0.5rem, 1vw, 1rem) clamp(3.2rem, 2.5vw, 6rem);
  border-radius: var(--space-xs);
  text-align: center;
  cursor: pointer;
}


@media screen and (min-width:48rem) {
  body {
    display: flex;
    align-items: center;
    justify-items: center;
    font-size: 1.2rem;
  }

  .main__signup--block {
    /*display: flex;*/
    display: none;
    flex-direction: column;
    margin: 1.5rem;
  }

  picture {
    margin-block-end: 1.5rem;
  }

  .success-block {
    width: 100%;
    background: var(--clr-blue-800);
    /*display: none;*/
    display: grid;
    place-items: center;
  }

  .success-block.show {
    display: grid;
    place-items: center;
  }

  .success-message {
    width: clamp(20rem, 30vw, 30rem);
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    background: var(--clr-white);
    border-radius: 1rem;
    padding: var(--space-lg);
  }

  .success-message img {
    width: 3rem;
    height: 3rem;
    margin-block-end: var(--space-md);
  }

  .success-message h1 {
    margin-block-end: 0.8rem;
    line-height: 1.1;
  }

  .success-message p {
    font-size: 0.85rem;
    margin-block-end: 1.5rem;
  }

  .success-message button {
    display: flex;
    align-items: center;
    justify-content: center;
    align-self: stretch;  
    white-space: nowrap; 
    text-align: center;    
    font-size: 1rem;        
    line-height: 1;
    padding: 1em 1.2em;
    font-weight: var(--fw-regular);
  }

}


@media screen and (min-width:64rem) {
  body {
    display: grid;
    place-items: center;
    background: var(--clr-blue-800);
    font-size: 0.65rem;
  }

  .main__content {
    width: 50%;
  }

  .main__signup--block {
    /*display: grid;*/
    display: none;
    grid-template-columns: repeat(2, 1fr);
    background: var(--clr-white);
    border-radius: 1.2rem;
    padding: 1rem;
    gap: 1rem;
    margin: 0;
  }

  picture {
    order: 2;
    margin-block-end: 0;
  }

  .main__signup--heading {
    font-size: 2rem;
  }

  .main__signup--copy {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .main__signup--copy ul {
    margin-inline-start: -0.2rem;
    margin-block-end: 0.7rem;
  }

  .main__signup--copy ul li {
    margin-block-end: 0.7rem;
    margin-inline-start: -0.1rem;
  }

  .main__signup--copy ul li::before {
    top: -0.05rem;
    left: 0.5rem;
    height: 1rem;
    width: 1rem;
  }

  .email-error-container {
    font-size: 0.65rem;
  }

  .field-button-container {
    gap: 0.9rem;
  }

  .field-button-container input, .field-button-container button {
    padding: 0.5rem;
    border-radius: 0.5rem;
  }

  .field-button-container button {
    font-size: 0.65rem;
    transition: transform 0.3s ease;
  }

  .field-button-container button:hover {
    transform: translateY(-3px);
  }

  /*.success-block {
    width: 100%;
    height: 100vh;
    background: var(--clr-blue-800);
    display: grid;
    place-items: center;
  }

  .success-message {
    display: block;
    width: 30%;
    background: var(--clr-white);
    border-radius: 0.6rem;
    padding: var(--space-lg);
  }

  .success-message img {
    width: 3rem;
    height: 3rem;
    margin-block-end: var(--space-md);
  }

  .success-message h1 {
    margin-block-end: 0.8rem;
    line-height: 1.1;
  }

  .success-message p {
    font-size: 0.85rem;
    margin-block-end: 1.2rem;
  }*/

  .success-message button {
    font-size: 0.8rem;
    padding: 0.5rem 6.4rem;
  }

  .success-message button:hover {
    background: linear-gradient(to right, var(--clr-red), var(--clr-orangered));
  }
}

